BJS2-92958 fix